CMTYAEM-1278 Fix alignment issue column control

--- a/ui.frontend/src/main/webpack/components/container/scss/styles/_column-control.scss
+++ b/ui.frontend/src/main/webpack/components/container/scss/styles/_column-control.scss
@@ -13,6 +13,7 @@
 
                     >.container {
                         width: 33%;
+                        max-width: 33%;
                     }
                 }
             }
@@ -31,10 +32,13 @@
 
                     >.container:first-of-type {
                         width: 33%;
+                        max-width: 33%;
+
                     }
 
                     >.container:nth-of-type(2) {
                         width: 66%;
+                        max-width: 66%;
                     }
                 }
             }
@@ -53,10 +57,12 @@
 
                     >.container:first-of-type {
                         width: 66%;
+                        max-width: 66%;
                     }
 
                     >.container:nth-of-type(2) {
                         width: 33%;
+                        max-width: 33%;
                     }
                 }
             }
